fix compact link embed border clipping

--- a/src/styles.css
+++ b/src/styles.css
@@ -233,7 +233,7 @@
 
 .farcaster-embed-url-link::before {
   width: calc(100% - 2px);
-  height: calc(100% - 3px);
+  height: 100%;
   z-index: 1;
 }
 
